namespace colab.Business.DTOs
{
    public class FinanciadorDTO
    {
        public int? Id { get; set; }
        public string? Nome { get; set; }
        public string? Email { get; set; }
    }
}