@startuml diagrama-classe

class Projeto {
  +nome: String
  +data_inicio: Date
  +data_fim: Date  
  +data_prevista_fim: Date
  +descricao: String
  +orcamento: Double
}

class Financiador {
  +nome: String
  +email: String
}

class Cargo {
  +nome: String
  +descricao: String
}

class Pessoa {
  +nome: String
  +email: String
  +telefone: String
  +cpf: String
}

class HistoricoStatusProjeto {
  +data_inicio: Date
  +data_fim: Date  
}

enum StatusProjeto{
  INATIVO
  ATIVO
  CANCELADO
  FINALIZADO
}

class Bolsa {
  +nome: String
  +plano_trabalho: String
  +valor: Double
  +data_inicio: Date
  +data_fim: Date  
  +data_prevista_fim: Date
  +ativo: Boolean
}

enum Escolaridade {
    TECNICO
    ENSINO MEDIO
    ENSINO SUPERIOR
    POS GRADUACAO
}

Projeto "1" -- "N" Bolsa: possui alocado >
Projeto "N" -l-> "1" Financiador : patrocina <

Projeto "1" -- "N" HistoricoStatusProjeto : armazena <
HistoricoStatusProjeto "1" -l-> "1" StatusProjeto : categoriza >

Bolsa "N" -- "1" Pessoa : recebe <
Bolsa "1" -- "1" Escolaridade : possui >

Bolsa "N" -- "1" Cargo : está associada >


@enduml